[package]
name = "api-integration-tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
